@@ -1,6 +1,7 @@
 [B]Version 1.1.115[/B]
 - ividz - fix listing
 - jav789 - removed
+- javgg - fix listing, playback
 
 
 
